add second iter main_svc: improve stats-server